--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -46,28 +46,28 @@ In 1934 stichteden O'Nolan en syne medstudenten een tydskrivt ''Blather'', dat e
 O'Nolan, den as [[duuts|düütsk]] in [[Dublin]] studeerden, kan tenminsten deylen van [[1933]] en [[1934]] in [[Duutsland|Düütskland]] eweasd hebben, vöärnamelik in [[Köln]] en [[Bonn]], mär details sint unseaker en vöälbespröäken. In [[1965]] bewäärden hee selv dat hee "vöäle månden in et [[Rijnland|Rynland]] en Bonn döärbrachten, sikselv afdryvend van de strikte nåjacht van study." töt vandage is der gin unafhankelik bewys vöär dissen uutvlucht (of vöär syn selvverklårde hüwelik med eyne 'Clara Ungerland' uut Köln). In öäre biografy van O'Nolan bespreaket Costello en Van de Kamp et halvslachtige bewys. See segt "...dat et in afweysigheid van slutend bewys een mystery ümgeaven döär giswark sal blyven, up sikselv representativ vöär de andere mysterys in et leaven van Brian O'Nolan dee den undersöker noch altyd uutdaagt."<ref>Costello, Peter en Van de Kamp, Peter. "Flann O'Brien – An Illustrated Biography." London, UK. Bloomsbury 1987. ISBN 0-7475-0129-7. bls. 45–50.</ref>
 
 ===Ambtenårye===
-Een vöärnaam deyl van O'Nolans persöynlike ümstandigheyden was syn anseen as ambtenaar van et yrske ryk. Döärdat syn vader al vroo uut de tyd köäm, mus hee teen bröders en süsters in leyven holden, med inbegrip van een öldere bröder, den as nen skryver was sunder vöäle sukces. Yrland was in årmood dumpeld tüsken 1930 en 1960. Ne bane as ambtenår stünd dårümme hoog in anseen, want et bööd vast inkoamen in ne samenleyving dee noch grotendeyls van [[buren]] afhüng. De yrske ambtenårye hevt seet de [[yrske börgeroorlog]] altyd slim apolitik eweasd. Et was ambtenårenbeleid en dårnöäst ungebrukelik vöär rangen boaven 'kantoorklerk' üm politike seenswysen uut te spreaken. Dat bedüden vöär O'Nolan dat hee sunder toostemming van syne högeren nit in kranten mocht skryven. Dårümme köäm hee med een antal pseudonymen, ofskoons hee dat dårvöär ouk al wal es deyd. O'Nolan deyd et bysünder good. Hee wüs sik up te warken töt persöynlik sekretaris van [[Seán T. O'Kelly]] (doomåls minister en later President van Yrland) en [[Seán McEntee]], nen invloodryken figuur den as håste wal weaten müt hebben dat O'Nolan skreyv as Na gCopaleen<ref>Curran, Steve. 'Could Paddy Leave off from Copying Just for Five Minutes': Brian O'Nolan and Eire's Beveridge Plan. Irish University Review. vol 31, nr 2. 2001. p 353–375.</ref>
+Een vöärnaam deyl van O'Nolans persöönlike ümstandigheyden was syn anseen as ambtenaar van et yrske ryk. Döärdat syn vader al vro uut de tyd köäm, mos hee teen bröders en süsters in leaven holden, med inbegrip van een öldere bröder, den as nen skryver was sunder vöäle sukses. Yrland was in armood dumpeld tüsken 1930 en 1960. Ne bane as ambtenår stünd dårümme houg in anseen, want et böäd vast inkoamen in ne samenleaving dee noch groutendeyls van [[buren]] afhüng. De yrske ambtenårye hevt seet de [[yrske börgeroorlog]] altyd slim apolitik eweasd. Et was ambtenårenbeleid en dårnöäst ungebrukelik vöär rangen boaven 'kantoorklerk' üm politike seenswysen uut te spreaken. Dat bedüden vöär O'Nolan dat hee sunder tostemming van syne höygeren nit in kranten mocht skryven. Dårümme köäm hee med een antal pseudonymen, ofskoons hee dat dårvöär ouk al wal es deyd. O'Nolan deyd et bysünder good. Hee wüs sik up te warken töt persöönlik sekretaris van [[Seán T. O'Kelly]] (domåls minister en later President van Yrland) en [[Seán McEntee]], nen invloodryken figuur den as håste wal weaten müt hebben dat O'Nolan skreyv as Na gCopaleen<ref>Curran, Steve. 'Could Paddy Leave off from Copying Just for Five Minutes': Brian O'Nolan and Eire's Beveridge Plan. Irish University Review. vol 31, nr 2. 2001. p 353–375.</ref>
 
-Et was een publik geheim dat O'Nolan beide Flann O'Brien en Myles na gCopaleen was. Syne kollega's kunden wal lachen üm syne skryvsels. De yrske ambtenårye sat in dee tyd reydelik intellektueel en liberaal in mekander. Van de andere kante mus O'Nolan et ouk nit te gek maken. As hee der politici te slim sul döärhalen, wör hee der achterhen edån. Dat geböärden ouk in [[1953]].<ref>[https://www.irishtimes.com/culture/books/the-fantastic-flann-o-brien-1.611390 O'Toole, Fintan. "The Fantastic Flann O'Brien." 1 October 2011. The Irish Times.] bekeaken up 2 oktober 2011.</ref> "Syn vöärt-an slimmer wördende superye en syne gewoonte üm nearbügende upmarkingen oaver höygere politici te maken in syne krantenkolumns leidden der too dat hee in 1953 uut de ambtenårye sat wörd.<ref>[https://www.irishtimes.com/opinion/an-irishman-s-diary-1.763600 McNally, Frank. "An Irishman's Diary". 14 mei 2009. The Irish Times.] Bekeaken up 21 October 2018</ref> (Hee güng, herinnert sik nen kollega, "in a final fanfare of f***s".<ref>Phelan, Michael. "A Watcher in the Wings: A Lingering Look at Myles na gCopaleen". Administration. Dublin, Institute of Public Administration of Ireland. Vol 24, nr 2. 1976. p 96–106.</ref>)
+Et was een publik geheim dat O'Nolan beide Flann O'Brien en Myles na gCopaleen was. Syne kollegas kunden wal lachen üm syne skryvsels. De yrske ambtenårye sat in dee tyd readelik intellektueel en liberaal in mekander. Van de andere kante mus O'Nolan et ouk nit te gek maken. As hee der politici te slim sul döärhalen, wör hee der achterhen edån. Dat geböärden ouk in [[1953]].<ref>[https://www.irishtimes.com/culture/books/the-fantastic-flann-o-brien-1.611390 O'Toole, Fintan. "The Fantastic Flann O'Brien." 1 October 2011. The Irish Times.] bekeaken up 2 oktober 2011.</ref> "Syn vöärt-an slimmer wördende superye en syne gewoonte üm nearbügende upmarkingen oaver höygere politici te maken in syne krantenkolumns leidden der too dat hee in 1953 uut de ambtenårye sat wörd.<ref>[https://www.irishtimes.com/opinion/an-irishman-s-diary-1.763600 McNally, Frank. "An Irishman's Diary". 14 mei 2009. The Irish Times.] Bekeaken up 21 October 2018</ref> (Hee güng, herinnert sik nen kollega, "in a final fanfare of f***s".<ref>Phelan, Michael. "A Watcher in the Wings: A Lingering Look at Myles na gCopaleen". Administration. Dublin, Institute of Public Administration of Ireland. Vol 24, nr 2. 1976. p 96–106.</ref>)
 
 
-==Persöynlik leyven==
-O'Nolan was een bekend figuur in [[Dublin]]. Toch is der mär weinig bekend oaver syn persöynlike leyven. Hee güng by de yrske oaverheid warken in [[1935]], by de afdeyling lokaal bestüür. Vanaf dat syn vader uut de tyd köäm in [[1937]] underhöäld hee syne elv bröders en süsters van syn inkoamen. Up den [[2 december|tweyden december]] [[1948]] trowden hee med Evelyn McDonnell, ne typiste van de afdeyling. By et trowen verhüüsden hee van syn oldershuus in Blackrock når et körtby liggende Merrion Avenue. Töt syn dood woanden hee up noch verskillende andere steydes in süüd-Dublin.<ref>[http://www.ricorso.net/rx/az-data/authors/o/OBrien_F/life.htm Ricorso.net. "Flann O'Brien (1911-66)".] Bekeaken up 13 oktober 2009.</ref> Se hadden gin kinder.
+==Persöönlik leaven==
+O'Nolan was een bekend figuur in [[Dublin]]. Toch is der mär weinig bekend oaver syn persöönlike leaven. Hee güng by de yrske oaverheid warken in [[1935]], by de afdeyling lokaal bestüür. Vanaf dat syn vader uut de tyd köäm in [[1937]] underhöäld hee syne elv bröders en süsters van syn inkoamen. Up den [[2 december|tweyden december]] [[1948]] trouwden hee med Evelyn McDonnell, ne typiste van de afdeyling. By et trouwen verhüüsden hee van syn oldershuus in Blackrock når et körtby liggende Merrion Avenue. Töt syn dood woanden hee up noch verskillende andere steades in Süüddublin.<ref>[http://www.ricorso.net/rx/az-data/authors/o/OBrien_F/life.htm Ricorso.net. "Flann O'Brien (1911-66)".] Bekeaken up 13 oktober 2009.</ref> Se hadden gin kinder.
 
 ===Gesundheid en dood===
-[[File:065 flann obrien grab.jpg|thumb|Grav van Brian O'Nolan/Brian Ó Nualláin, syne ölders en vrowe up et Deans Grange karkhov in Dublin]]
-O'Nolan was et gröätste deyl van syn leyven alkoholist. In latere jåren had hee vake problemen med de gesundheid.<ref>[https://books.google.com/books?id=5cSkSB13ZQcC&pg=PA798&lpg=PA798&dq=brian+o'nolan+evelyn+1966#PPA799,M1 Gale, Steven H. ed. "O'Nolan, Brian." Encyclopedia of British Humorists: Geoffrey Chaucer to John Cleese. Vol.2 (L-W). 1996, Garland Publishing, New York/London. ISBN 978-0-8240-5990-3. p 798.] Bekeaken up 13 oktober 2009 med Google Books.</ref> Hee kreyg [[kaanker|halskanker]] en störv an nen hartanval up [[1 april]] [[1966]]. Syn bröder Micheál skreyv dåroaver et volgende: "In 1966 wör Brian bestråled vöär halskanker. Hee wör spåred van nen pynliken dood döär nen groten hartanval. Hee störv up dee vroge morgen van 1 april (syn lätsten grap)."<ref>[http://www.irishtimes.com/newspaper/ireland/2011/1001/1224305062293.html Ó Nualláin, Micheál. "The Brother: memories of Brian". The Irish Times, Irish Times Trust.] Eskreaven up 1 oktober 2011. Bekeaken up 1 oktober 2011</ref> 
+[[File:065 flann obrien grab.jpg|thumb|Grav van Brian O'Nolan/Brian Ó Nualláin, syne ölders en vrouwe up et Deans Grange karkhov in Dublin]]
+O'Nolan was et gröytste deyl van syn leaven alkoholist. In latere jåren had hee vake problemen med de gesundheid.<ref>[https://books.google.com/books?id=5cSkSB13ZQcC&pg=PA798&lpg=PA798&dq=brian+o'nolan+evelyn+1966#PPA799,M1 Gale, Steven H. ed. "O'Nolan, Brian." Encyclopedia of British Humorists: Geoffrey Chaucer to John Cleese. Vol.2 (L-W). 1996, Garland Publishing, New York/Londen. ISBN 978-0-8240-5990-3. p 798.] Bekeaken up 13 oktober 2009 med Google Books.</ref> Hee kreyg [[kaanker|halskanker]] en störv an nen hartanval up [[1 april]] [[1966]]. Syn bröder Micheál skreyv dåroaver et volgende: "In 1966 wör Brian bestråld vöär halskanker. Hee wör spård van nen pynliken doud döär nen groten hartanval. Hee störv up dee vroge morgen van 1 april (syn lätsten grap)."<ref>[http://www.irishtimes.com/newspaper/ireland/2011/1001/1224305062293.html Ó Nualláin, Micheál. "The Brother: memories of Brian". The Irish Times, Irish Times Trust.] Eskreaven up 1 oktober 2011. Bekeaken up 1 oktober 2011</ref> 
 
 ==Journalistik==
-Under de naam Myles na gCopaleen (of Myles na Gopaleen) skreyv O'Nolan körte stükkes vöär de [[Irish Times]]. Meysttyds in et [[engelsk]], mär ouk reygelmåtig in et [[keltisk]]. Syn krantenstükken "Cruiskeen Lawn" (ne verengelsking van de yrske naam ''Crúiscín lán'', wat "oaverströymend krüükske" bedüdet) begün as ne ryge breyven an de Irish Times. Oorsprunglik warren se bedoold üm een [[dichtkeunst|gedicht]] wat in deeselvde krante stünd der döär te halen: "Spraying the Potatoes", döär skryver Patrick Kavanagh:
+Under de name Myles na gCopaleen (of Myles na Gopaleen) skreyv O'Nolan körte stükkes vöär de [[Irish Times]]. Meysttyds in et [[engelsk]], mär ouk regelmåtig in et [[keltisk]]. Syn krantenstükken "Cruiskeen Lawn" (ne verengelsking van de yrske naam ''Crúiscín lán'', wat "oaverströymend krüükske" bedüüdt) begün as ne ryge breven an de Irish Times. Oorsprungelik warren se bedoold üm een [[dichtkeunst|gedicht]] wat in deeselvde krante stünd der döär te halen: "Spraying the Potatoes", döär skryver Patrick Kavanagh:
 
-"Ik sin ginnen dichtkenner - Et eanigste gedicht wat ik ooit skreyv köäm voort doo as ik med lyv en sele in et güldene harnas van Dame Laudanum verbleyv - mär ik denke dat menear Kavanaugh [sic] up de gode weg is. Misskyn wil de ''Irish Times'', tydlosen kampioon van uns burenvolk, uns temöyte koamen med ne ryge oaver sodöanige burene ingewikkeldheden as untstöakene [[sik]]ken-üyers, horselpokte korthoornründer, besmettelike abortus, neet-eivörmige eileiders en senüwstöringen by heyren dee de hüür betalet."
+"Ik sin ginnen dichtkenner - Et eynigste gedicht wat ik ooit skreyv köäm voord do as ik med lyv en sele in et güldene harnas van Dame Laudanum verbleyv - mär ik denke dat meneyr Kavanaugh [sic] up de gode weg is. Miskyn wil de ''Irish Times'', tydlousen kampioon van uns burenvolk, uns temöte koamen med ne ryge oaver sodöänige burene ingewikkeldheyden as untstöäkene [[sik]]ken-üjers, horselpokte korthoornründer, besmettelike abortus, neet-eiförmige eileiders en seanüwstöyringen by heyren dee de hüür betalet."
 
-De breyven, mangs skreyven döär O'Nolan mär wat ouk neet, güngen wydter under verskillende valse naams, in verskeidene stylen en oaver meyrdere underwarpen, wåründer andere breyven van deselvde skryvers. De breyven slögen an by de leysers van de Irish Times en R. M. Smyllie, doomåls 'n höyvdredaktöör, halen O'Nolan an üm nen kolumn te skryven. Belangryk üm te weaten is dat de Irish Times selv vulhöäld dat der drey skryvers under nen skuulnaam medskreaven an de Cruiskeen Lawn. Dat höld O'Nolan langen tyd buten skot as ambtenår. Dat was vöäral nöydig as nen kolumn flink uutdagend was.
+De breven, mangs skreyven döär O'Nolan mär wat ouk neet, güngen wydter under verskillende valse naams, in verskeidene stylen en oaver meyrdere underwarpen, wåründer andere breven van deselvde skryvers. De breven slögen an by de leasers van de Irish Times en R. M. Smyllie, domåls den höyvdredaktöör, halen O'Nolan an üm nen kolumn te skryven. Belangryk üm te weaten is dat de Irish Times selv vulhöäld dat der dree skryvers under nen skuulnaam medskreaven an de Cruiskeen Lawn. Dat höld O'Nolan langen tyd buten skot as ambtenår. Dat was vöäral nöydig as nen kolumn flink uutdagend was.
 
-Den eyrsten kolumn köäm uut up 4 oktober 1940, under de skuulnaam "An Broc" ("De Dasse"). In alle volgende kolumns gebröyk hee de naam Myles na gCopaleen ("Myles van de kleine paerdkes" of "Myles van de Ponies"). Den naam had he van The Collegians, een book van [[Gerald Griffin]]. In et begin was 'n kolumn in et yrsk, mär al gauw was et höyvdsakelik engelsk, med mangs [[düütsk]], [[fransk]] of [[latyn]] der döär. Mangs warren de kolumns slim satirisk van toon, richt an de literaire elite van Dublin, lüde dee de yrske språke probeerden up te wekken, de yrske regeyring en de "gewone lüde van Yrland". Et volgende stükke, wårin as den skryver droovgeystig wearümme decht an een kort verblyv in Düütskland as student, is een vöärbeyld van de bytende humor wår de Cruiskeen Lawn üm bekend stünd:
+Den eyrsten kolumn köäm uut up 4 oktober 1940, under de skuulnaam "An Broc" ("De Dasse"). In alle volgende kolumns gebröäk hee de name Myles na gCopaleen ("Myles van de kleine paerdkes" of "Myles van de Ponies"). Den name had he van The Collegians, een book van [[Gerald Griffin]]. In et begin was den kolumn in et yrsk, mär al gauw was et höyvdsakelik engelsk, med mangs [[düütsk]], [[fransk]] of [[latyn]] derdöär. Mangs warren de kolumns slim satirisk van toon, richted an de literäre elite van Dublin, lüde dee de yrske språke probeerden up te wekken, de yrske regering en de "gewoane lüde van Yrland". Et volgende stükke, wårin as den skryver droovgeystig weaderümme dächt an een kort verblyv in Düütskland as student, is een vöärbeald van de bytende humor wår de Cruiskeen Lawn üm bekend stünd:
 
-<blockquote>"Et valt my up dat et Gröne Eiland alvöärtan gröner wördet. Heyrlike sweyrachtigen dee up knöppe lyket nöstelt sik in de täkke van unse böyme, stummelige narcissen köänet seen worden up et hoge grösland. Lente is underweagens en yder höffelik meydken decht an dat nye vöärjårskleyd. De tyd sal sachter loupen töt Favonius oaver de weide verske kleyder uutspreide, de lely en de rose dee nit enaeyed hebbet of spünnen. Vervlöökt, myne gedachten gåt wearümme når myne dage in Heidelberg. Sonya en Lili. En Magda. En Ernst Schmutz, Georg Geier, Theodor Winkleman, [[Efrem zimbalist]], Otto Grün. En den [[akkordeon]]ist Kurt Schachmann. En Doktor Oreille, afstammeling van yrske prinsen. Ich hab' mein Herz/ in Heidelberg verloren/ in einer lauen/ Sommernacht/ Ich war verliebt/ bis über beide/ Ohren/ und wie ein Röslein/hatt'/ Ihr Mund gelächt of so yts humpa humpa humpa humpa humpa mein Herz it schlägt am Neckarstrand. Ne seyr mooie studentenmelody. Beer en musik en middenachtelike swempartyen in de Neckar. Gespreaken in et yrsk med [[Kuno Meyer|Kun O'Meyer]] en John Marquess ... Helaas, sülke tingelende geluden. Und als wir nahmen/ Abschied vor den Toren/ beim letzten Küss, da hab' Ich Klar erkannt/ dass Ich mein Herz/ in Heidelberg verloren/ MEIN HERZ/ es schlägt am Neck-ar-strand! Humpa dumpa dum.</blockquote>
+<blockquote>"Et valt my up dat et Gröne Eiland alvöärdan gröner wördt. Heyrlike sweyrachtigen dee up knöppe lyket nöstelt sik in de täkke van unse böyme, stummelige narcissen köänet seen worden up et houge grösland. Lente is underweagens en yder hövvelik meydken dächt an dat nye vöärjårskleyd. De tyd sal sachter loupen töt Favonius oaver de weide verske kleyder uutspreidet, de lely en de rose dee nit enaid hebbet of spünnen. Vervlöked, myne gedachten gåt weaderümme når myne dage in Heidelberg. Sonya en Lili. En Magda. En Ernst Schmutz, Georg Geier, Theodor Winkleman, [[Efrem zimbalist]], Otto Grün. En den [[akkordeon]]ist Kurt Schachmann. En Doktor Oreille, afstammeling van yrske prinsen. Ich hab' mein Herz/ in Heidelberg verloren/ in einer lauen/ Sommernacht/ Ich war verliebt/ bis über beide/ Ohren/ und wie ein Röslein/hatt'/ Ihr Mund gelächt of so yts humpa humpa humpa humpa humpa mein Herz it schlägt am Neckarstrand. Ne seyr mooie studentenmelody. Beer en musik en middenachtelike swempartyen in de Neckar. Gespreaken in et yrsk med [[Kuno Meyer|Kun O'Meyer]] en John Marquess ... Helaas, sülke tingelende gelüden. Und als wir nahmen/ Abschied vor den Toren/ beim letzten Küss, da hab' Ich Klar erkannt/ dass Ich mein Herz/ in Heidelberg verloren/ MEIN HERZ/ es schlägt am Neck-ar-strand! Humpa dumpa dum.</blockquote>
 
 :<blockquote>''Et gewone volk van Yrland:'' Is dat düütsk nit slim as et yrsk? Slim in 'n hals en so?</blockquote>
 
@@ -77,13 +77,13 @@ Den eyrsten kolumn köäm uut up 4 oktober 1940, under de skuulnaam "An Broc" ("
 
 :<blockquote>''Ikselv:'' jå.</blockquote>
 
-:<blockquote>''Et gewone volk van Yrland:'' De geluden is allemål uut 'n hals, weat y neet.</blockquote>
+:<blockquote>''Et gewone volk van Yrland:'' De gelüden is allemål uut 'n hals, weat y neet.</blockquote>
 
 :<blockquote>''Ikselv.'' Jå.</blockquote>
 
-:<blockquote>''Et gewone volk van Yrland:'' Språken slim achteruut 'n hals dee beide et keltisk en et düütsk.</blockquote>
+:<blockquote>''Et gewone volk van Yrland:'' Språken slim achteruut den hals dee beide et keltisk en et düütsk.</blockquote>
 
-Nuallain/na gCopaleen skreyv ''Cruiskeen Lawn'' vöär ''The Irish Times'' töt synen dood in 1966.
+Nuallain/na gCopaleen skreyv ''Cruiskeen Lawn'' vöär ''The Irish Times'' töt synen doud in 1966.
 
 ==Referensys==
 <references/>
