*Empty MediaWiki Message*

--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -52,9 +52,9 @@ Et was een publik geheim dat O'Nolan beide Flann O'Brien en Myles na gCopaleen w
 
 
 ==Persöönlik leaven==
-O'Nolan was een bekend figuur in [[Dublin]]. Toch is der mär weinig bekend oaver syn persöönlike leaven. Hee güng by de yrske oaverheid warken in [[1935]], by de afdeyling lokaal bestüür. Vanaf dat syn vader uut de tyd köäm in [[1937]] underhöäld hee syne elv bröders en süsters van syn inkoamen. Up den [[2 december|tweyden december]] [[1948]] trouwden hee med Evelyn McDonnell, ne typiste van de afdeyling. By et trouwen verhüüsden hee van syn oldershuus in Blackrock når et körtby liggende Merrion Avenue. Töt syn dood woanden hee up noch verskillende andere steades in Süüddublin.<ref>[http://www.ricorso.net/rx/az-data/authors/o/OBrien_F/life.htm Ricorso.net. "Flann O'Brien (1911-66)".] Bekeaken up 13 oktober 2009.</ref> Se hadden gin kinder.
+O'Nolan was een bekend figuur in [[Dublin]]. Toch is der mär weinig bekend oaver syn persöönlike leaven. Hee güng by de yrske oaverheid warken in [[1935]], by de afdeyling lokaal bestüür. Vanaf dat syn vader uut de tyd köäm in [[1937]] underhöäld hee syne elv bröders en süsters van syn inkoamen. Up den [[2 december|tweyden december]] [[1948]] trouwden hee med Evelyn McDonnell, ne typiste van de afdeyling. By et trouwen verhüüsden hee van syn oldershuus in Blackrock når et körtby liggende Merrion Avenue. Töt syn doud woanden hee up noch verskillende andere steades in Süüddublin.<ref>[http://www.ricorso.net/rx/az-data/authors/o/OBrien_F/life.htm Ricorso.net. "Flann O'Brien (1911-66)".] Bekeaken up 13 oktober 2009.</ref> Se hadden gin kinder.
 
-===Gesundheid en dood===
+===Gesundheid en doud===
 [[File:065 flann obrien grab.jpg|thumb|Grav van Brian O'Nolan/Brian Ó Nualláin, syne ölders en vrouwe up et Deans Grange karkhov in Dublin]]
 O'Nolan was et gröytste deyl van syn leaven alkoholist. In latere jåren had hee vake problemen med de gesundheid.<ref>[https://books.google.com/books?id=5cSkSB13ZQcC&pg=PA798&lpg=PA798&dq=brian+o'nolan+evelyn+1966#PPA799,M1 Gale, Steven H. ed. "O'Nolan, Brian." Encyclopedia of British Humorists: Geoffrey Chaucer to John Cleese. Vol.2 (L-W). 1996, Garland Publishing, New York/Londen. ISBN 978-0-8240-5990-3. p 798.] Bekeaken up 13 oktober 2009 med Google Books.</ref> Hee kreyg [[kaanker|halskanker]] en störv an nen hartanval up [[1 april]] [[1966]]. Syn bröder Micheál skreyv dåroaver et volgende: "In 1966 wör Brian bestråld vöär halskanker. Hee wör spård van nen pynliken doud döär nen groten hartanval. Hee störv up dee vroge morgen van 1 april (syn lätsten grap)."<ref>[http://www.irishtimes.com/newspaper/ireland/2011/1001/1224305062293.html Ó Nualláin, Micheál. "The Brother: memories of Brian". The Irish Times, Irish Times Trust.] Eskreaven up 1 oktober 2011. Bekeaken up 1 oktober 2011</ref> 
 
