*Empty MediaWiki Message*

--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -32,21 +32,21 @@ de Eywigheid untrolled.
 O'Nolan spandeerden syne skooljåren ouk deyls an de Synge Street Christian Brothers School. Syn book [[The Hard Life]] is ne halv-autobiografiske beskryving van syne beleaving van de christenbröders.
 
 ===Studentenjåren===
-O'Nolan was een druk baasman in syne studententyd an [[University College, Dublin]] (UCD). Dår was hee een aktiv en vöälbespröäken lid van de in dee tyd bekende ''Literary and Historical Society''. Hee skreyv vöär et studentenblad ''Comhthrom Féinne'' (''Earlik Spöl'') under verskeidene skuulnaams, mär vöäral as ''Brother Barnabas''. Upmarkelikerwys skreyv hee domåls een verhaal med de name "Scènes in een roman van Brother Barnabas (miskyn wal nå synen doud)", wårin vöäle van syne ideen en temas når vöärten kummet dee as hee later ouk in syn book ''At Swim-Two-Birds'' gebruukt. In et verhaal wördt den sogenaamden autöör van et verhaal stöädig teagenwarked döär syne eygene karakters. Dee keest vastbeslöäten öär eygene weg, wo houge of laege den skryver ouk springt. Den bandyt van et verhaal, eyne Carruthers McDaid, den as den skryver bedoold had as et laegste van et laegste soort misdådiger, "den as geleidelik mos afsakken töt et butenste uutende van de menskelike rottigheid," vindt in steade dårvan een modaal inkummen med de verkoup van katten an öldere vrouwlüde en wördt nen heymeliken karkenganger, sunder tostemming van de skryver. Underwyl keest Shaun Svoolish, den beougden held van et verhaal, vöär een händig en gemakkelik leaven sunder romantik en heldendåden:
+O'Nolan was een druk baasman in syne studententyd an [[University College, Dublin]] (UCD). Dår was hee een aktiv en vöälbespröäken lid van de in dee tyd bekende ''Literary and Historical Society''. Hee skreyv vöär et studentenblad ''Comhthrom Féinne'' (''Earlik Spöl'') under verskeidene skuulnaams, mär vöäral as ''Brother Barnabas''. Upmarkelikerwys skreyv hee domåls een verhaal med de name "Scènes in een roman van Brother Barnabas (miskyn wal nå synen doud)", wårin vöäle van syne ideen en temas når vöärten kummet dee as hee later ouk in syn book ''At Swim-Two-Birds'' gebruukt. In et verhaal wördt den sogenaamden autöör van et verhaal stöädig teagenwarked döär syne eygene karakters. Dee keest vastbeslöäten öär eygene weg, wo houge of laege den skryver ouk springt. Den bandyt van et verhaal, eyne Carruthers McDaid, den as den skryver bedoold had as et laegste van et laegste soort misdådiger, "den as geleidelik mus afsakken töt et butenste uutende van de menskelike rottigheid," vindt in steade dårvan een modaal inkummen med de verkoup van katten an öldere vrouwlüde en wördt nen heymeliken karkenganger, sunder tostemming van de skryver. Underwyl keest Shaun Svoolish, den beougden held van et verhaal, vöär een händig en gemakkelik leaven sunder romantik en heldendåden:
 
 :'Ik mag dan wal nen börgerliken kül weasen,' antwoordden hee, 'mär ik weate gewoan wat ik gaerne hebbe. Wårüm mag ik nit med Bridie trouwen en et es by de ambtenarye proberen?'
 :'Ungelükken by et spour sint gelükkig seldsaam,' sea ik uutendelik, 'mär as se geböäret, sint se verskrikkelik. Denkt der noch es oaver.'
 
 In 1934 stichteden O'Nolan en syne medstudenten een tydskrivt ''Blather'', dat et nit lange vulhöälden. De skryvsels dårin, med düdelike kenmarken van jöägdelike selvoaverskatting, låt alweader wat van O'Nolans latere wark seen. Dit mål wyset se når de styl van syne latere ''Cruiskeen Lawn''-kolumns as Myles na gCopaleen:
 
-:Hyr is ''Blather''. Terwyl as wy vöärwaerds skrydet üm unsen büging te maken, spöär y vergeavens når teykenen van underdånigheid of når eynig bewys van een verlangen üm te pleseren. Wy sint een selvingenöämen en verdörven grup kearls. Wy sint so gröyts as bantamhanen en ydel as pauwen.
+:Hyr is ''Blather''. Terwyl as wy vöärwaerds skrydet üm unsen büging te maken, spöär y vergeavens når teykenen van underdånigheid of når eanig bewys van een verlangen üm te pleseren. Wy sint een selvingenöämen en verdörven grup kearls. Wy sint so gröyts as bantamhanen en ydel as pauwen.
 
 :''Blather'' interesseert sik niks. Nen sardonisken lach untsküt uns terwyl wy büget, wreade en cyniske hunde dee as wy sint. Et is nen verskrikkeliken lach, nen lach van verlöärene kearls. Ruuk y de lucht van swår beer?
 
 O'Nolan, den as [[duuts|düütsk]] in [[Dublin]] studeerden, kan tenminsten deylen van [[1933]] en [[1934]] in [[Duutsland|Düütskland]] eweasd hebben, vöärnamelik in [[Köln]] en [[Bonn]], mär details sint unseaker en vöälbespröäken. In [[1965]] bewäärden hee selv dat hee "vöäle månden in et [[Rijnland|Rynland]] en Bonn döärbrachten, sikselv afdryvend van de strikte nåjacht van study." töt vandage is der gin unafhankelik bewys vöär dissen uutvlucht (of vöär syn selvverklårde hüwelik med eyne 'Clara Ungerland' uut Köln). In öäre biografy van O'Nolan bespreaket Costello en Van de Kamp et halvslachtige bewys. See segt "...dat et in afweysigheid van slutend bewys een mystery ümgeaven döär giswark sal blyven, up sikselv representativ vöär de andere mysterys in et leaven van Brian O'Nolan dee den undersöker noch altyd uutdaagt."<ref>Costello, Peter en Van de Kamp, Peter. "Flann O'Brien – An Illustrated Biography." London, UK. Bloomsbury 1987. ISBN 0-7475-0129-7. bls. 45–50.</ref>
 
 ===Ambtenårye===
-Een vöärnaam deyl van O'Nolans persöönlike ümstandigheyden was syn anseen as ambtenaar van et yrske ryk. Döärdat syn vader al vro uut de tyd köäm, mos hee teen bröders en süsters in leaven holden, med inbegrip van een öldere bröder, den as nen skryver was sunder vöäle sukses. Yrland was in armood dumpeld tüsken 1930 en 1960. Ne bane as ambtenår stünd dårümme houg in anseen, want et böäd vast inkoamen in ne samenleaving dee noch groutendeyls van [[buren]] afhüng. De yrske ambtenårye hevt seet de [[yrske börgeroorlog]] altyd slim apolitik eweasd. Et was ambtenårenbeleid en dårnöäst ungebrukelik vöär rangen boaven 'kantoorklerk' üm politike seenswysen uut te spreaken. Dat bedüden vöär O'Nolan dat hee sunder tostemming van syne höygeren nit in kranten mocht skryven. Dårümme köäm hee med een antal pseudonymen, ofskoons hee dat dårvöär ouk al wal es deyd. O'Nolan deyd et bysünder good. Hee wüs sik up te warken töt persöönlik sekretaris van [[Seán T. O'Kelly]] (domåls minister en later President van Yrland) en [[Seán McEntee]], nen invloodryken figuur den as håste wal weaten müt hebben dat O'Nolan skreyv as Na gCopaleen<ref>Curran, Steve. 'Could Paddy Leave off from Copying Just for Five Minutes': Brian O'Nolan and Eire's Beveridge Plan. Irish University Review. vol 31, nr 2. 2001. p 353–375.</ref>
+Een vöärnaam deyl van O'Nolans persöönlike ümstandigheyden was syn anseen as ambtenaar van et yrske ryk. Döärdat syn vader al vro uut de tyd köäm, mus hee teen bröders en süsters in leaven holden, med inbegrip van een öldere bröder, den as nen skryver was sunder vöäle sukses. Yrland was in armood dumpeld tüsken 1930 en 1960. Ne bane as ambtenår stünd dårümme houg in anseen, want et böäd vast inkoamen in ne samenleaving dee noch groutendeyls van [[buren]] afhüng. De yrske ambtenårye hevt seet de [[yrske börgeroorlog]] altyd slim apolitik eweasd. Et was ambtenårenbeleid en dårnöäst ungebrukelik vöär rangen boaven 'kantoorklerk' üm politike seenswysen uut te spreaken. Dat bedüden vöär O'Nolan dat hee sunder tostemming van syne höygeren nit in kranten mocht skryven. Dårümme köäm hee med een antal pseudonymen, ofskoons hee dat dårvöär ouk al wal es deyd. O'Nolan deyd et bysünder good. Hee wüs sik up te warken töt persöönlik sekretaris van [[Seán T. O'Kelly]] (domåls minister en later President van Yrland) en [[Seán McEntee]], nen invloodryken figuur den as håste wal weaten müt hebben dat O'Nolan skreyv as Na gCopaleen<ref>Curran, Steve. 'Could Paddy Leave off from Copying Just for Five Minutes': Brian O'Nolan and Eire's Beveridge Plan. Irish University Review. vol 31, nr 2. 2001. p 353–375.</ref>
 
 Et was een publik geheim dat O'Nolan beide Flann O'Brien en Myles na gCopaleen was. Syne kollegas kunden wal lachen üm syne skryvsels. De yrske ambtenårye sat in dee tyd readelik intellektueel en liberaal in mekander. Van de andere kante mus O'Nolan et ouk nit te gek maken. As hee der politici te slim sul döärhalen, wör hee der achterhen edån. Dat geböärden ouk in [[1953]].<ref>[https://www.irishtimes.com/culture/books/the-fantastic-flann-o-brien-1.611390 O'Toole, Fintan. "The Fantastic Flann O'Brien." 1 October 2011. The Irish Times.] bekeaken up 2 oktober 2011.</ref> "Syn vöärt-an slimmer wördende superye en syne gewoonte üm nearbügende upmarkingen oaver höygere politici te maken in syne krantenkolumns leidden der too dat hee in 1953 uut de ambtenårye sat wörd.<ref>[https://www.irishtimes.com/opinion/an-irishman-s-diary-1.763600 McNally, Frank. "An Irishman's Diary". 14 mei 2009. The Irish Times.] Bekeaken up 21 October 2018</ref> (Hee güng, herinnert sik nen kollega, "in a final fanfare of f***s".<ref>Phelan, Michael. "A Watcher in the Wings: A Lingering Look at Myles na gCopaleen". Administration. Dublin, Institute of Public Administration of Ireland. Vol 24, nr 2. 1976. p 96–106.</ref>)
 
@@ -61,7 +61,7 @@ O'Nolan was et gröytste deyl van syn leaven alkoholist. In latere jåren had he
 ==Journalistik==
 Under de name Myles na gCopaleen (of Myles na Gopaleen) skreyv O'Nolan körte stükkes vöär de [[Irish Times]]. Meysttyds in et [[engelsk]], mär ouk regelmåtig in et [[keltisk]]. Syn krantenstükken "Cruiskeen Lawn" (ne verengelsking van de yrske naam ''Crúiscín lán'', wat "oaverströymend krüükske" bedüüdt) begün as ne ryge breven an de Irish Times. Oorsprungelik warren se bedoold üm een [[dichtkeunst|gedicht]] wat in deeselvde krante stünd der döär te halen: "Spraying the Potatoes", döär skryver Patrick Kavanagh:
 
-"Ik sin ginnen dichtkenner - Et eynigste gedicht wat ik ooit skreyv köäm voord do as ik med lyv en sele in et güldene harnas van Dame Laudanum verbleyv - mär ik denke dat meneyr Kavanaugh [sic] up de gode weg is. Miskyn wil de ''Irish Times'', tydlousen kampioon van uns burenvolk, uns temöte koamen med ne ryge oaver sodöänige burene ingewikkeldheyden as untstöäkene [[sik]]ken-üjers, horselpokte korthoornründer, besmettelike abortus, neet-eiförmige eileiders en seanüwstöyringen by heyren dee de hüür betalet."
+"Ik sin ginnen dichtkenner - Et eanigste gedicht wat ik ooit skreyv köäm voord do as ik med lyv en sele in et güldene harnas van Dame Laudanum verbleyv - mär ik denke dat meneyr Kavanaugh [sic] up de gode weg is. Miskyn wil de ''Irish Times'', tydlousen kampioon van uns burenvolk, uns temöte koamen med ne ryge oaver sodöänige burene ingewikkeldheyden as untstöäkene [[sik]]ken-üjers, horselpokte korthoornründer, besmettelike abortus, neet-eiförmige eileiders en seanüwstöyringen by heyren dee de hüür betalet."
 
 De breven, mangs skreyven döär O'Nolan mär wat ouk neet, güngen wydter under verskillende valse naams, in verskeidene stylen en oaver meyrdere underwarpen, wåründer andere breven van deselvde skryvers. De breven slögen an by de leasers van de Irish Times en R. M. Smyllie, domåls den höyvdredaktöör, halen O'Nolan an üm nen kolumn te skryven. Belangryk üm te weaten is dat de Irish Times selv vulhöäld dat der dree skryvers under nen skuulnaam medskreaven an de Cruiskeen Lawn. Dat höld O'Nolan langen tyd buten skot as ambtenår. Dat was vöäral nöydig as nen kolumn flink uutdagend was.
 
