/* updeyling in 3 tyden */

--- a/Geskydenisse_van_et_kristendom.mw
+++ b/Geskydenisse_van_et_kristendom.mw
@@ -40,7 +40,7 @@ An de hand van de 'gewoune' gesskydenisse wörd de karkgeskydenisse up 3 stükke
  |row1-2-from=30
  |row1-2-to=590
  |row1-2-colour=#ccccff
- |row1-3-text=De Middeleeuwen
+ |row1-3-text=De Middeleywen
  |row1-3-from=590
  |row1-3-to=1517
  |row1-3-colour=#ffcccc
