/* updeyling in 3 tyden */

--- a/Geskydenisse_van_et_kristendom.mw
+++ b/Geskydenisse_van_et_kristendom.mw
@@ -18,7 +18,7 @@ An de hand van de 'gewoune' gesskydenisse wörd de karkgeskydenisse up 3 stükke
 {{Horizontalen tiedbalk
 |border=none
 |link-to=-
-|title=Indeling Kristendom
+|title=Updealing Christendom
 |collapsible=yes
 |row1=note
 |row1-1-text= Pinkster
