--- a/Geskydenisse_van_et_kristendom.mw
+++ b/Geskydenisse_van_et_kristendom.mw
@@ -2,9 +2,9 @@ De '''geskydenisse van et christendom''', of ouk noch wal es an-edüüd as '''ka
 
 Et karkelike christendom is de wyds gelöyvden godsdeenst up de wearld, med syn 2,1 miljard anhangers.
 
-== Updeyling ==
+== Updealing ==
 === updeyling in 3 tyden ===
-An de hand van de 'gewoune' gesskydenisse wörd de karkgeskydenisse up 3 stükken upedeuld:
+An de hand van de 'gewoane' gesskydenisse wörd de karkgeskydenisse up 3 stükken up edeald:
 {| class="wikitable"
 !Tyden !! jårtallen !! Begünnegy
 |-
@@ -36,7 +36,7 @@ An de hand van de 'gewoune' gesskydenisse wörd de karkgeskydenisse up 3 stükke
  |row1-1-from=0
  |row1-1-to=30
  |row1-1-colour=#ffffff
- |row1-2-text=Olde karkgeschiedenisse
+ |row1-2-text=Olde karkgeskydenisse
  |row1-2-from=30
  |row1-2-to=590
  |row1-2-colour=#ccccff
@@ -54,10 +54,10 @@ An de hand van de 'gewoune' gesskydenisse wörd de karkgeskydenisse up 3 stükke
 |inc=100
 |to=2014
 |axis-nudge=-1em
-|caption=Indeling periodes Kristendom
+|caption=Updealing periodes Christendom
 }}
 
-=== Klassike updeyling ===
+=== Klassike updealing ===
 Een andere klassike updeyling, van de hand van de neaderlandske karkhistorikus [[Otto de Jong]], wördt gebrüükd in syn handbook ''Geschiedenis der kerk'':
 # de vrogge karke (töt 312)
 # de ståtskarke (312-1100)
