--- a/Geskydenisse_van_et_kristendom.mw
+++ b/Geskydenisse_van_et_kristendom.mw
@@ -6,7 +6,7 @@ Et karkelike christendom is de wyds gelöyvden godsdeenst up de wearld, med syn 
 === updeyling in 3 tyden ===
 An de hand van de 'gewoane' gesskydenisse wörd de karkgeskydenisse up 3 stükken up edeald:
 {| class="wikitable"
-!Tyden !! jårtallen !! Begünnegy
+!Tyden !! jårtallen !! Begünne
 |-
 | De olde karkgeskydenisse || 30 - 590
 | [[Pinkster]]
