[[Haarlemmermeer_vlag.svg]] is vervungen deur [[Haarlemmermeer_vlag_1965.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR2|Criterion 2]] (meaningless or ambiguous name) · Sup

--- a/Haorlemmermeer.mw
+++ b/Haorlemmermeer.mw
@@ -1,6 +1,6 @@
 {{Gemeante
 | naam = Hoarlemmermeer
-| bestaandsnaam vlagge = Haarlemmermeer vlag.svg
+| bestaandsnaam vlagge = Haarlemmermeer vlag 1965.svg
 | bestaandsnaam woapn = Coat of arms of Haarlemmermeer.svg
 | lokatie = LocatieHaarlemmermeer
 | proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
