*Empty MediaWiki Message*

--- a/K._ter_Laanpries.mw
+++ b/K._ter_Laanpries.mw
@@ -37,3 +37,4 @@ De pries wordt oetlangd aan lu en organisoatsies dij zuk verdainstelk moakt hebb
 *2019 - Bert Hadders
 
 [[Kategorie:Grunnegs artikel]]
+[[Kategorie:Kulturele priezen]]
